# ph-mobile-network

./: Cargo.toml  LICENSE  Readme.md
.github/workflows/: rust.yml
examples/: main.rs
src/: dito.rs  errors.rs  globe.rs  lib.rs  main.rs  mobile_network.rs  mutate.rs  pattern.rs  smart.rs  sun.rs  talk_n_text.rs  validate.rs
src/globals/: dito_prefixes.rs  globe_prefixes.rs  mod.rs  smart_prefixes.rs  sun_prefixes.rs  tnt_prefixes.rs
