[package]
name = "ph-mobile-network"
version = "0.1.1"
edition = "2021"
authors = ["Uriah Galang <codeitlikemiley@gmail.com>"]
description = "A library for identifying mobile network operators in the Philippines based on phone number prefixes."
license = "MIT"
repository = "https://github.com/codeitlikemiley/ph_mobile_network"
documentation = "https://github.com/codeitlikemiley/ph_mobile_network/Readme.md"
homepage = "https://github.com/codeitlikemiley/ph_mobile_network"
keywords = ["mobile", "network", "philippines", "prefix"]
categories = ["api-bindings", "development-tools::debugging"]

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.4"
